--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,38 +2,46 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-        
+
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake libgtest-dev googletest
+        sudo apt-get install -y build-essential cmake lcov
+        sudo apt-get install -y libgtest-dev googletest
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build
-      
+      run: |
+        cmake -B build -DCMAKE_BUILD_TYPE=Debug \
+          -DCMAKE_CXX_FLAGS="-fprofile-arcs -ftest-coverage -fprofile-update=atomic -O0"
+
     - name: Build
-      run: cmake --build ${{github.workspace}}/build
+      run: cmake --build build --clean-first
 
-    - name: Run Basic Demo
-      working-directory: ${{github.workspace}}/build
-      run: ./demo_basic
-
-    - name: Run Advanced Demo
-      working-directory: ${{github.workspace}}/build
-      run: ./demo_advanced
-
-    - name: Run Unit Tests
-      working-directory: ${{github.workspace}}/build
+    - name: Run Tests
+      working-directory: ./build
       run: ./ConcurrentHashMapTest
+
+    - name: Generate Coverage Report
+      run: |
+        lcov --capture --directory ./build --output-file coverage.info \
+             --rc geninfo_unexecuted_blocks=1 \
+             --ignore-errors mismatch,negative
+        lcov --remove coverage.info '/usr/*' --output-file coverage.info
+        lcov --list coverage.info || true  # Prevent failure on warnings
+
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: coverage.info
+        fail_ci_if_error: false
