--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -37,3 +37,27 @@ jobs:
     - name: Run Unit Tests
       working-directory: ${{github.workspace}}/build
       run: ./ConcurrentHashMapTest
+
+  test:
+      name: Run tests and collect coverage
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 2
+  
+        - name: Set up Node
+          uses: actions/setup-node@v4
+  
+        - name: Install dependencies
+          run: npm install
+  
+        - name: Run tests
+          run: npx jest --coverage
+  
+        - name: Upload results to Codecov
+          uses: codecov/codecov-action@v5
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            slug: diffstorm/ConcurrentHashMap
