--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,62 +2,45 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-        
+
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake libgtest-dev googletest
+        sudo apt-get install -y build-essential cmake 
+        sudo apt-get install -y libgtest-dev googletest lcov
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build
-      
+    - name: Configure CMake with Coverage
+      run: |
+        cmake -B build -DCMAKE_BUILD_TYPE=Debug \
+          -DCMAKE_CXX_FLAGS="-fprofile-arcs -ftest-coverage"
+
     - name: Build
-      run: cmake --build ${{github.workspace}}/build
+      run: cmake --build build
 
-    - name: Run Basic Demo
-      working-directory: ${{github.workspace}}/build
-      run: ./demo_basic
-
-    - name: Run Advanced Demo
-      working-directory: ${{github.workspace}}/build
-      run: ./demo_advanced
-
-    - name: Run Unit Tests
-      working-directory: ${{github.workspace}}/build
+    - name: Run Tests
+      working-directory: ./build
       run: ./ConcurrentHashMapTest
 
-  test:
-      name: Run tests and collect coverage
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 2
-  
-        - name: Set up Node
-          uses: actions/setup-node@v4
-  
-        - name: Install dependencies
-          run: npm install
-  
-        - name: Run tests
-          run: npx jest --coverage
-  
-        - name: Upload results to Codecov
-          uses: codecov/codecov-action@v5
-          with:
-            token: ${{ secrets.CODECOV_TOKEN }}
-            slug: diffstorm/ConcurrentHashMap
+    - name: Generate Coverage Report
+      run: |
+        lcov --capture --directory ./build --output-file coverage.info
+        lcov --remove coverage.info '/usr/*' '*/test/*' --output-file coverage.info
+        lcov --list coverage.info
+
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: coverage.info
+        flags: cpp
+        name: Codecov-CPP
